# model-police

./: .gitignore  LICENSE  README.md  dump_layer_names_and_shapes_from_checkpoint.py  dump_layer_names_with_shapes_from_checkpoint.py  kohya.py  model_police.py  pyproject.toml  requirements-diffusers.txt  requirements.txt  test.py
.github/workflows/: ci.yml  codeql.yml
model_dictionaries/: flux_diffusers.csv
model_police/: __init__.py  checkpoint.py  dump_from_diffusers  dump_from_diffusers.py  dump_layer_names_with_shapes_from_checkpoint.py  dump_layer_names_with_shapes_from_diffusers_pipeline.py  full_ignore_suffixes.txt  lora_down_suffixes.txt  lora_ignore_suffixes.txt  lora_up_suffixes.txt  merge_dictionaries.py  model_police.py
model_police/model_dictionaries/: flux2-dev_full_diffusers.csv  flux2-dev_full_diffusers_2.csv  flux2-dev_lora_diffusers.csv  flux2-dev_lora_musubi-tuner.csv  flux2-dev_text-encoder_diffusers.csv  flux2-dev_transformer_diffusers.csv  flux2-dev_vae_diffusers.csv  flux2-dev_vae_diffusers_2.csv  flux2-klein-4b_full_diffusers.csv  flux2-klein-4b_lora_diffusers.csv  flux2-klein-4b_lora_musubi-tuner.csv  flux2-klein-9b_full_diffusers.csv  flux2-klein-9b_lora_diffusers.csv  flux2-klein-9b_lora_musubi-tuner.csv  flux2_vae_diffusers_2.csv  flux_full_diffusers.csv  flux_kohya.csv  flux_lora_diffusers.csv  flux_lora_diffusers_2.csv  flux_lora_kohya.csv  flux_lora_kohya_2.csv  flux_lora_xlabs.csv  flux_lora_xlabs_2.csv  flux_text-encoder_diffusers.csv  flux_text_encoder_2_diffusers.csv  flux_transformer_diffusers.csv  flux_vae_diffusers.csv  fluxcontrol_lora_diffusers.csv  hidream_lora_unknown.csv  qwen-image-edit-plus_full_diffusers.csv  qwen-image-edit-plus_vae_diffusers.csv  qwen-image_lora_comfyui.csv  qwen-image_lora_diffusers_2.csv  (+92 more)
(+2 files in other folders)
