[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "model_police"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
# Command line interface entrypoint scripts
dump_layer_names_with_shapes_from_checkpoint = "model_police.dump_layer_names_with_shapes_from_checkpoint:main"
dump_layer_names_with_shapes_from_diffusers_pipeline = "model_police.dump_layer_names_with_shapes_from_diffusers_pipeline:main"

[tool.setuptools.package-data]
"model_police" = [
    "*_suffixes.txt",
    "conversions/*",
    "model_dictionaries/*",
]